--- a/Index.html
+++ b/Index.html
@@ -5,33 +5,40 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <body>
         <div class="row">
-          <div class="grid-container">
-            <div class="item1">
-              <div class="center-container">
-                <h2>
-                    <span class="Velkommen">Velkommen</span>
-                </h2>
-              </div>
+          <div class="col-sm-8">
+            <h1 class="Velkommen">
+              Velkommen
+              <h4>
+                <blockquote class="blackquote-reverse">
+                  <small>til Rubens hjemmeside</small>
+                </blockquote>
+              </h4>
+            </h1>
+          </div>
+          <div class="col-sm-4">
+            <div class="embed-responsive embed-responsive-16by9">
+              <img class="mig" src="billederTilWebApp/mig.png">
             </div>
-            <div class="item2">
-                <img src="billederTilWebApp/mig.png" alt="MegetPaeneRuben">
-            </div>
-            <div class="item3"><p>Hellothere</p></div>
-            <div class="item4"><p>Hellothere</p></div>
-            <div class="item5"><p>Hellothere</p></div>
-            <div class="item6"><p>Hellothere</p></div>
-            <div class="item7"><p>Hellothere</p></div>
           </div>
         </div>
-
-          
+        <div class="row">
+          <div class="col-sm-4">
+            <a href="#demo" data-toggle="collapse">Om mig</a>
+              <div id="demo" class="collapse">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </div>
+          </div>
+          <div class="col-sm-4">Sociale medier</div>
+          <div class="col-sm-4">Github</div>
+        </div>
     </body>
 </html>
