--- a/Index.html
+++ b/Index.html
@@ -11,34 +11,37 @@
 </head>
 <body>
     <body>
-        <div class="row">
-          <div class="col-sm-8">
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="container">
             <h1 class="Velkommen">
               Velkommen
-              <h4>
-                <blockquote class="blackquote-reverse">
-                  <small>til Rubens hjemmeside</small>
-                </blockquote>
-              </h4>
             </h1>
           </div>
-          <div class="col-sm-4">
+        </div>
+        <div class="col-sm-4">
+          <div class="container">
             <div class="embed-responsive embed-responsive-16by9">
               <img class="mig" src="billederTilWebApp/mig.png">
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <a href="#demo" data-toggle="collapse">Om mig</a>
-              <div id="demo" class="collapse">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </div>
+      </div>
+      <div class="Customcon">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <a href="#demo" data-toggle="collapse">Om mig</a>
+                <div id="demo" class="collapse">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+            </div>
+            <div class="col-sm-4">Sociale medier</div>
+            <div class="col-sm-4">Github</div>
           </div>
-          <div class="col-sm-4">Sociale medier</div>
-          <div class="col-sm-4">Github</div>
         </div>
+      </div>
     </body>
 </html>
