--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://unpkg.com/vue@next"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -30,7 +31,7 @@
       <div class="Customcon">
         <div class="container">
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-2">
               <a href="#demo" data-toggle="collapse">Om mig</a>
                 <div id="demo" class="collapse">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -38,10 +39,16 @@
                   quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </div>
-            <div class="col-sm-4">Sociale medier</div>
-            <div class="col-sm-4">Github</div>
+            <div class="col-sm-2">Erhvervserfaring</div>
+            <div class="col-sm-2">Sociale medier</div>
+            <div class="col-sm-2">Github</div>
+            <div class="col-sm-2">Kontakt</div>
           </div>
         </div>
       </div>
+      <div id="app">
+        {{message}}
+      </div>
+      <script src="js/backend.js"></script>
     </body>
 </html>
