--- a/Index.html
+++ b/Index.html
@@ -49,6 +49,6 @@
       <div id="app">
         {{message}}
       </div>
-      <script src="js/backend.js"></script>
+      <script src="index.js"></script>
     </body>
 </html>
