--- a/Index.html
+++ b/Index.html
@@ -28,9 +28,9 @@
             </div>
           </div>
           <div class="Customcon">
-              <div v-for="(x, index) in Items" class="col-sm-2 Customrow">
-                <a href data-toggle="collapse" class aria-expanded="true">{{x.name}}</a>
-                <div>{{x.info}}</div>
+              <div v-for="x in Items" class="col-sm-2 Customrow">
+                <div v-on:click="showInfo(x)">{{x.name}}</div>
+                <div :class="{ 'content': true, 'show': x.showInfo }">{{x.infoToShow}}</div>
               </div>
           </div>
         </div>
