--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -20,7 +20,7 @@
               </h1>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 ">
             <div class="container">
               <div class="embed-responsive embed-responsive-16by9">
                 <img class="mig" src="billederTilWebApp/mig.png" alt="Billede">
