--- a/Index.html
+++ b/Index.html
@@ -22,8 +22,8 @@
           </div>
           <div class="col-sm-4 ">
             <div class="container">
-              <div class="embed-responsive embed-responsive-16by9">
-                <img class="mig" src="billederTilWebApp/mig.png" alt="Billede">
+              <div class="embed-responsive embed-responsive-16by9 mig">
+                <img class="img-responsive center-block" src="billederTilWebApp/mig.png" alt="Billede">
               </div>
             </div>
           </div>
