centered image and welcome

--- a/Index.html
+++ b/Index.html
@@ -13,17 +13,21 @@
   <body>
     <div id="app">
         <div class="row">
-          <div class="col-sm-8">
-            <div class="container">
-              <h1 class="Velkommen">
-                Velkommen
-              </h1>
+          <div class="Customvel">
+            <div class="col-sm-8">
+              <div class="container">
+                <h1 class="Velkommen">
+                  Velkommen
+                </h1>
+              </div>
             </div>
-          </div>
-          <div class="col-sm-4 ">
-            <div class="container">
-              <div class="embed-responsive embed-responsive-16by9 mig">
-                <img class="img-responsive center-block" src="billederTilWebApp/mig.png" alt="Billede">
+            <div class="col-sm-4">
+              <div class="Customvel">
+                <div class="embed-responsive embed-responsive-16by9">
+                  <div class="container mig">
+                    <img class="mig" src="billederTilWebApp/mig.png" alt="Billede">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
