--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
                 <button v-if="x.link" class="button button1" @click="followlink(x)">
                   {{ x.name }}
                 </button>
-                <a v-else @click="showInfo(x)" class="button button1">{{ x.name }}</a>
+                <button v-else @click="showInfo(x)" class="button button1">{{ x.name }}</button>
                 <div :class="{ 'content': true, 'show': x.showInfo }">{{ x.infoToShow }}</div>
               </div>
             </div>
