Added media query
velkommen og billede skalere korrekt nu på diverse skærmstørrelser

--- a/Index.html
+++ b/Index.html
@@ -15,20 +15,14 @@
     <div id="app">
         <div class="row">
           <div class="CustomPadding">
-            <div class="col-sm-8">
-              <div class="container">
-                <h1 class="Velkommen">
-                  Velkommen
-                </h1>
-              </div>
+            <div class="col-sm-8 container CustomPadding2">
+              <h1 class="Velkommen">
+                Velkommen
+              </h1>
             </div>
-            <div class="col-sm-4">
-              <div class="CustomPadding">
-                <div class="embed-responsive embed-responsive-16by9">
-                  <div class="container mig">
-                    <img class="mig" src="billederTilWebApp/mig.png" alt="Billede">
-                  </div>
-                </div>
+            <div class="col-sm-4 container CustomPadding">
+              <div class="container mig2 CustomPadding">
+                <img class="mig2" src="billederTilWebApp/mig.png" alt="Billede">
               </div>
             </div>
           </div>
