--- a/Index.html
+++ b/Index.html
@@ -7,12 +7,19 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
   <body>
     <div id="app">
+      <ul>
+        <li><a class="active" href="Index.html">Hjem</a></li>
+        <li><a href="Ommig.html">Om mig</a></li>
+        <li><a href="#projekter">Projekter</a></li>
+        <li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>
+      </ul>
         <div class="row">
           <div class="CustomPadding">
             <div class="col-sm-8 container CustomPadding2">
