--- a/Ommig.html
+++ b/Ommig.html
@@ -20,6 +20,18 @@
         <li><a href="Projekter.html">Projekter</a></li>
         <li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>
       </ul>
+      <div class="row">
+        <div class="col-sm-7">
+          <img class ="customWidth CustomPadding3" src="billederTilWebApp/RubenPaaGlatIs.jpg" alt="RubenPaaGroenland">
+        </div>
+        <div class="col-sm-5">
+          <div class="CustomPadding">
+            <h1>Om mig</h1>
+            <h3>Introduktion</h2>
+            <p>Jeg er en 26-årig ung mand, der studerer Datamatiker på 5-og sidste semester.</p>
+          </div>
+        </div>
+      </div>
       </div>
       <script src="index.js"></script>
   </body>
