--- a/Ommig.html
+++ b/Ommig.html
@@ -28,7 +28,28 @@
           <div class="CustomPadding">
             <h1>Om mig</h1>
             <h3>Introduktion</h2>
-            <p>Jeg er en 26-årig ung mand, der studerer Datamatiker på 5-og sidste semester.</p>
+            <p>Hej,</p>
+              <p>
+                Jeg er en 26-årig datamatikstuderende på 5. semester, og jeg forventes at blive færdig til sommer. 
+                Mit navn er Ruben, og jeg har nylig kastet mig ud i at skabe denne hjemmeside, der fungerer som mit online CV.
+              </p>
+              <p>
+                Når jeg ikke sidder med næsen i bøgerne, kan jeg lide at bruge min tid på små projekter, lytte til musik, spille computer, se YouTube og have interessante madlavningsoplevelser. 
+                Jeg mener, livet handler om mere end blot kodning, ikke? 
+              </p>
+              <p>
+                På mit 4. semester arbejdede jeg intenst med et projekt om remote access trojans. Jeg ønskede at forstå, hvordan man udvikler dem og hvordan man forsvarer sig imod dem. 
+                Det endte med at give mig en karakter 12, og det styrkede ikke kun mine tekniske færdigheder, men gav mig også et dybere indblik i cybersecurity.
+              </p>
+              <p>
+                Nu står jeg overfor en spændende tid med praktik, hvor jeg ser frem til at lære det virkelige arbejdsmarked at kende. 
+                Efter jeg er færdiguddannet, har jeg planer om at flytte ind mod byen, måske i et bofællesskab, og jeg arbejder på at spare op til at kunne tage et lån til en andelsbolig.
+              </p>
+              <p>
+              Mit yndlingskodesprog er uden tvivl Python. Dets enkelhed og alsidighed fascinerer mig, og jeg har brugt det i forskellige projekter.
+              Senest har jeg dedikeret tid til at forbedre mine færdigheder inden for hjemmesidedesign, som tidligere var mit svage punkt. 
+              Jeg er tilfreds med mine fremskridt, især fordi min hjemmeside ikke kun er flot, men også responsiv.
+              </p>
           </div>
         </div>
       </div>
