--- a/Ommig.html
+++ b/Ommig.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -17,40 +18,44 @@
       <ul>
         <li><a href="Index.html">Hjem</a></li>
         <li><a class="active" href="Ommig.html">Om mig</a></li>
-        <li><a href="Projekter.html">Projekter</a></li>
+        <li><a href="Projekter.html">Login</a></li>
         <li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>
       </ul>
       <div class="row">
-        <div class="col-sm-7">
-          <img class ="customWidth CustomPadding3" src="billederTilWebApp/RubenPaaGlatIs.jpg" alt="RubenPaaGroenland">
+        <div class="col-sm-5" align="center">
+          
+            <img class ="customWidth CustomPadding3 imgCustom" src="billederTilWebApp/RubenPåGlatIsPng.png" alt="RubenPaaGroenland">
+          
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-7">
           <div class="CustomPadding">
             <h1>Om mig</h1>
-            <h3>Introduktion</h2>
-            <p>Hej,</p>
               <p>
                 Jeg er en 26-årig datamatikstuderende på 5. semester, og jeg forventes at blive færdig til sommer. 
                 Mit navn er Ruben, og jeg har nylig kastet mig ud i at skabe denne hjemmeside, der fungerer som mit online CV.
               </p>
               <p>
-                Når jeg ikke sidder med næsen i bøgerne, kan jeg lide at bruge min tid på små projekter, lytte til musik, spille computer, se YouTube og have interessante madlavningsoplevelser. 
+                Når jeg ikke sidder med næsen i computeren, kan jeg lide at bruge min tid på små projekter, lytte til musik, spille computer, se YouTube og udvide min kulinariske horisont. 
                 Jeg mener, livet handler om mere end blot kodning, ikke? 
               </p>
               <p>
                 På mit 4. semester arbejdede jeg intenst med et projekt om remote access trojans. Jeg ønskede at forstå, hvordan man udvikler dem og hvordan man forsvarer sig imod dem. 
-                Det endte med at give mig en karakter 12, og det styrkede ikke kun mine tekniske færdigheder, men gav mig også et dybere indblik i cybersecurity.
+                Det endte med et tolv tal, og det styrkede ikke kun mine tekniske færdigheder, men gav mig også et dybere indblik i cybersecurity.
               </p>
               <p>
                 Nu står jeg overfor en spændende tid med praktik, hvor jeg ser frem til at lære det virkelige arbejdsmarked at kende. 
-                Efter jeg er færdiguddannet, har jeg planer om at flytte ind mod byen, måske i et bofællesskab, og jeg arbejder på at spare op til at kunne tage et lån til en andelsbolig.
+                Efter jeg er færdiguddannet, har jeg planer om at flytte ind mod byen, måske i et bofællesskab, og få sparet op til en andelsbolig.
               </p>
               <p>
-              Mit yndlingskodesprog er uden tvivl Python. Dets enkelhed og alsidighed fascinerer mig, og jeg har brugt det i forskellige projekter.
+              Mit yndlingskodesprog er uden tvivl Python. Dets enkelhed og alsidighed er dejligt at skrive i, og jeg har brugt det i et par projekter.
               Senest har jeg dedikeret tid til at forbedre mine færdigheder inden for hjemmesidedesign, som tidligere var mit svage punkt. 
-              Jeg er tilfreds med mine fremskridt, især fordi min hjemmeside ikke kun er flot, men også responsiv.
+              Jeg er tilfreds med mine fremskridt, især fordi min hjemmeside er responsiv.
               </p>
-          </div>
+            </div>
+              <div class="container2">
+                <a href="https://www.linkedin.com/in/ruben-olsen-355351172/" class="fa fa-linkedin"></a>
+                <a href="https://www.instagram.com/ruberboiiii/" class="fa fa-instagram"></a>
+              </div>
         </div>
       </div>
       </div>
