--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a class="active" href="Index.html">Hjem</a></li>
         <li><a href="Ommig.html">Om mig</a></li>
-        <li><a href="#projekter">Projekter</a></li>
+        <li><a href="#projekter">Login</a></li>
         <li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>
       </ul>
         <div class="row">
