--- a/Projekter.html
+++ b/Projekter.html
@@ -17,9 +17,11 @@
       <ul>
         <li><a href="Index.html">Hjem</a></li>
         <li><a href="Ommig.html">Om mig</a></li>
-        <li><a class="active" href="Projekter.html">Projekter</a></li>
+        <li><a class="active" href="Projekter.html">Login</a></li>
         <li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>
       </ul>
+      
+
       </div>
       <script src="index.js"></script>
   </body>
