Retlæste om mig tekst

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
+
 </head>
   <body>
     <ul>
@@ -60,24 +66,19 @@
                     Mit navn er Ruben, og jeg er nyuddannet datamatiker. Jeg har nylig kastet mig ud i at skabe denne hjemmeside, der fungerer som mit online portfolio.
                   </p>
                   <p>
-                    Når jeg ikke sidder med næsen i computeren, kan jeg lide at bruge min tid på små projekter, lytte til musik, spille computer, se YouTube og udvide min kulinariske horisont. 
-                    Livet handler om mere end blot kodning, ikke? 
+                    Når jeg ikke sidder med næsen i computeren, kan jeg lide at bruge min tid på små projekter, lytte til musik, spille computer, se YouTube og udvide min kulinariske horisont. Livet handler om mere end blot kodning, ikke? 
                   </p>
                   <p>
-                    På mit 4. semester arbejdede jeg intenst med et projekt om remote access trojans. Jeg ønskede at forstå, hvordan man udvikler dem og hvordan man forsvarer sig imod dem. 
-                    Det endte med et 12 tal, og det styrkede ikke kun mine tekniske færdigheder, men gav mig også et dybere indblik i cybersecurity.
+                    I mit 4. semester arbejdede jeg intenst med et projekt om remote access trojans. Jeg ønskede at forstå, hvordan man udvikler dem og hvordan man forsvarer sig imod dem. Det endte med et 12 tal, og det styrkede ikke kun mine tekniske færdigheder, men gav mig også et dybere indblik i cybersecurity.
                   </p>
                   <p>
-                    På mit 5. semester arbejdede min gruppe og jeg på et projekt for mikkelsen electronics, hvor vi skulle levere et tidsregistreringssystem. Vi konstruerede projektet fra bunden, og fulgte Clean architecture, hvilket var meget spændende at sætte op, udvide og ændre.
-                    Det endte med et 10 tal, og det forbedrede ikke kun min forståelse for arkitekturen, men gjorde mig også opmærksom på vigtigheden af velvære, holdånd og gennemsigtighed.
+                    I mit 5. semester arbejdede min gruppe og jeg på et projekt for Mikkelsen Electronics, hvor vi skulle levere et tidsregistreringssystem. Vi konstruerede projektet fra bunden, og fulgte Clean Architecture, hvilket var meget spændende at sætte op, udvide og ændre. Det endte med et 10 tal, og det forbedrede ikke kun min forståelse for arkitekturen, men gjorde mig også opmærksom på vigtigheden af velvære, holdånd og gennemsigtighed.
                   </p>
                   <p>
                     Nu står jeg overfor en spændende tid, hvor jeg ser frem til at komme ud på arbejdsmarkedet.
                   </p>
                   <p>
-                    Mit yndlingskodesprog er uden tvivl c#. Dets alsidighed er beundrernde, også har jeg hovedsagligt brugt det igennem udannelsen.
-                    Senest har jeg dedikeret tid til at forbedre mine færdigheder inden for hjemmesidedesign.
-                    Jeg er tilfreds med mine fremskridt, især fordi min hjemmeside er responsiv.
+                    Mit yndlingskodesprog er uden tvivl c#. Dets alsidighed er beundrende, også har jeg hovedsageligt brugt det igennem uddannelsen. Senest har jeg dedikeret tid til at forbedre mine færdigheder inden for hjemmesidedesign. Jeg er tilfreds med mine fremskridt, især fordi min hjemmeside er responsiv.
                   </p>
                 </div>
                   <div class="container2">
