Fixed showing full website in the beginning

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
 
 </head>
-  <body>
+  <body class = "js-loading">
     <ul>
       <li><a href="#home" id="nav-home">Hjem</a></li>
       <li><a href="#aboutMe" id="nav-aboutMe">Om mig</a></li>
-      <li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>
+      <!--<li style="float:right"><a href="#HamburgerMenu"><span class="material-symbols-outlined">menu</span></a></li>-->
     </ul>
+
     <div id="app">
+      
         <section id="home">
           <div class="row">
             <div class="CustomPadding">
@@ -54,6 +56,7 @@
             </div>
           </div>
         </section>
+
         <section id="aboutMe">
           <div class="row">
             <div class="col-sm-5" align="center">
@@ -88,6 +91,7 @@
             </div>
           </div>
         </section>
+
       <script src="index.js"></script>
   </body>
 </html>
