Added bottom padding to welcome section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="app">
         <section id="home">
           <div class="row">
-            <div class="CustomPadding">
+            <div class="CustomPadding bottomPadding">
               <div class="col-sm-8 container CustomPadding2">
                 <h1 class="Velkommen">
                   Velkommen
@@ -53,7 +53,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+          </div>
         </section>
 
         <section id="aboutMe">
@@ -62,7 +62,7 @@
                 <img class ="customWidth CustomPadding imgCustom" src="billederTilWebApp\RubenPaaGlatIs.jpg" alt="RubenPaaGroenland">
             </div>
 
-            <div class="col-sm-7 buttomPadding">
+            <div class="col-sm-7 bottomPadding">
               <div>
                 <h1>Om mig</h1>
                   <p>
